jvm/jvm.rs

extern "C" {
    pub fn JVM_GetMethodParameters(env: *mut JNIEnv, method: jobject) -> jobjectArray;
}
extern "C" {
    pub fn JVM_DoPrivileged(
        env: *mut JNIEnv,
        cls: jclass,
        action: jobject,
        context: jobject,
        wrapException: jboolean,
    ) -> jobject;
}
extern "C" {
    pub fn JVM_GetInheritedAccessControlContext(env: *mut JNIEnv, cls: jclass) -> jobject;
}
extern "C" {
    pub fn JVM_GetStackAccessControlContext(env: *mut JNIEnv, cls: jclass) -> jobject;
}
extern "C" {
    pub fn JVM_RegisterSignal(
        sig: jint,
        handler: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn JVM_RaiseSignal(sig: jint) -> jboolean;
}
extern "C" {
    pub fn JVM_FindSignal(name: *const ::std::os::raw::c_char) -> jint;
}
extern "C" {
    pub fn JVM_DesiredAssertionStatus(env: *mut JNIEnv, unused: jclass, cls: jclass) -> jboolean;
}
extern "C" {
    pub fn JVM_AssertionStatusDirectives(env: *mut JNIEnv, unused: jclass) -> jobject;
}
extern "C" {
    pub fn JVM_SupportsCX8() -> jboolean;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JVM_DTraceProbe {
    pub method: jmethodID,
    pub function: jstring,
    pub name: jstring,
    pub reserved: [*mut ::std::os::raw::c_void; 4usize],
}
#[doc = " Encapsulates the stability ratings for a DTrace provider field"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JVM_DTraceInterfaceAttributes {
    pub nameStability: jint,
    pub dataStability: jint,
    pub dependencyClass: jint,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JVM_DTraceProvider {
    pub name: jstring,
    pub probes: *mut JVM_DTraceProbe,
    pub probe_count: jint,
    pub providerAttributes: JVM_DTraceInterfaceAttributes,
    pub moduleAttributes: JVM_DTraceInterfaceAttributes,
    pub functionAttributes: JVM_DTraceInterfaceAttributes,
    pub nameAttributes: JVM_DTraceInterfaceAttributes,
    pub argsAttributes: JVM_DTraceInterfaceAttributes,
    pub reserved: [*mut ::std::os::raw::c_void; 4usize],
}
extern "C" {
    pub fn JVM_DTraceGetVersion(env: *mut JNIEnv) -> jint;
}
extern "C" {
    pub fn JVM_DTraceActivate(
        env: *mut JNIEnv,
        version: jint,
        module_name: jstring,
        providers_count: jint,
        providers: *mut JVM_DTraceProvider,
    ) -> jlong;
}
extern "C" {
    pub fn JVM_DTraceIsProbeEnabled(env: *mut JNIEnv, method: jmethodID) -> jboolean;
}
extern "C" {
    pub fn JVM_DTraceDispose(env: *mut JNIEnv, activation_handle: jlong);
}
extern "C" {
    pub fn JVM_DTraceIsSupported(env: *mut JNIEnv) -> jboolean;
}
extern "C" {
    #[doc = "PART 2: Support for the Verifier and Class File Format Checker"]
    pub fn JVM_GetClassNameUTF(env: *mut JNIEnv, cb: jclass) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetClassCPTypes(env: *mut JNIEnv, cb: jclass, types: *mut ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn JVM_GetClassCPEntriesCount(env: *mut JNIEnv, cb: jclass) -> jint;
}
extern "C" {
    pub fn JVM_GetClassFieldsCount(env: *mut JNIEnv, cb: jclass) -> jint;
}
extern "C" {
    pub fn JVM_GetClassMethodsCount(env: *mut JNIEnv, cb: jclass) -> jint;
}
extern "C" {
    pub fn JVM_GetMethodIxExceptionIndexes(
        env: *mut JNIEnv,
        cb: jclass,
        method_index: jint,
        exceptions: *mut ::std::os::raw::c_ushort,
    );
}
extern "C" {
    pub fn JVM_GetMethodIxExceptionsCount(env: *mut JNIEnv, cb: jclass, method_index: jint)
        -> jint;
}
extern "C" {
    pub fn JVM_GetMethodIxByteCode(
        env: *mut JNIEnv,
        cb: jclass,
        method_index: jint,
        code: *mut ::std::os::raw::c_uchar,
    );
}
extern "C" {
    pub fn JVM_GetMethodIxByteCodeLength(env: *mut JNIEnv, cb: jclass, method_index: jint) -> jint;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JVM_ExceptionTableEntryType {
    pub start_pc: jint,
    pub end_pc: jint,
    pub handler_pc: jint,
    pub catchType: jint,
}
extern "C" {
    pub fn JVM_GetMethodIxExceptionTableEntry(
        env: *mut JNIEnv,
        cb: jclass,
        method_index: jint,
        entry_index: jint,
        entry: *mut JVM_ExceptionTableEntryType,
    );
}
extern "C" {
    pub fn JVM_GetMethodIxExceptionTableLength(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_GetFieldIxModifiers(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_GetMethodIxModifiers(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_GetMethodIxLocalsCount(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_GetMethodIxArgsSize(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_GetMethodIxMaxStack(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jint;
}
extern "C" {
    pub fn JVM_IsConstructorIx(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jboolean;
}
extern "C" {
    pub fn JVM_IsVMGeneratedMethodIx(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
    ) -> jboolean;
}
extern "C" {
    pub fn JVM_GetMethodIxNameUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetMethodIxSignatureUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPFieldNameUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPMethodNameUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPMethodSignatureUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPFieldSignatureUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPClassNameUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPFieldClassNameUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPMethodClassNameUTF(
        env: *mut JNIEnv,
        cb: jclass,
        index: jint,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn JVM_GetCPFieldModifiers(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
        calledClass: jclass,
    ) -> jint;
}
extern "C" {
    pub fn JVM_GetCPMethodModifiers(
        env: *mut JNIEnv,
        cb: jclass,
        index: ::std::os::raw::c_int,
        calledClass: jclass,
    ) -> jint;
}
extern "C" {
    pub fn JVM_ReleaseUTF(utf: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn JVM_IsSameClassPackage(env: *mut JNIEnv, class1: jclass, class2: jclass) -> jboolean;
}
